feat: implement ForbiddenApi checker core (model, parser, matcher, checker)
Add the immutable ForbiddenSignature model, the line-oriented signature DSL
parser, a javac-free ForbiddenApiMatcher (unit-testable without a compiler,
per architecture review), the ErrorProneFlags-driven config/bundle loader,
and the ForbiddenApiChecker BugChecker itself (5 tree matchers covering
class/package/field/method/constructor/method-reference usages via
resolved symbols). Also ships the three built-in bundles, each verified
against the actual JDK 25 API via javap rather than guessed.

Build-config fixes needed along the way: this module's own sources import
javac internals directly, which needs --add-exports even under -Dquick and
is incompatible with the archetype's default --release flag (switched to
explicit source/target); Surefire's forked JVM needs its own argLine for
CompilationTestHelper; and the archetype's archetype:generate turns out to
never emit .gitignore (reproduced on a clean regenerate), worked around by
copying it from the archetype's own template.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>